testing using new AwsV4 signer