@@ -16,10 +16,11 @@
 package com.amazonaws.neptune.client.jena;
 
 import software.amazon.awssdk.auth.credentials.AwsCredentialsProvider;
-import software.amazon.awssdk.auth.signer.Aws4Signer;
-import software.amazon.awssdk.auth.signer.params.Aws4SignerParams;
+
 import software.amazon.awssdk.http.SdkHttpFullRequest;
 import software.amazon.awssdk.http.SdkHttpMethod;
+import software.amazon.awssdk.http.auth.aws.signer.AwsV4HttpSigner;
+import software.amazon.awssdk.http.auth.spi.signer.SignedRequest;
 import software.amazon.awssdk.regions.Region;
 
 import javax.net.ssl.SSLContext;
@@ -48,6 +49,9 @@ import java.util.concurrent.Executor;
  * The client wraps a delegate HttpClient and intercepts requests to add the necessary
  * AWS authentication headers (Authorization and x-amz-date) before forwarding them
  * to the underlying client.
+ * <P>
+ * A new HTTP client and connection must be created every time the request contains a BODY.
+ * </P>
  * 
  * @author AWS Neptune Team
  * @since 1.0
@@ -132,20 +136,17 @@ public class AwsSigningHttpClient extends HttpClient {
         // Convert the Java HTTP request to AWS SDK format for signing
         SdkHttpFullRequest awsRequestForSigning = toSdkRequest(request, requestBody);
 
-        // Configure the AWS Signature V4 signer parameters
-        Aws4SignerParams signerParams = Aws4SignerParams.builder()
-                .awsCredentials(credentialsProvider.resolveCredentials())
-                .signingName(serviceName)
-                .signingRegion(region)
-                .build();
-
-        // Sign the request using AWS Signature V4
-        SdkHttpFullRequest signedSdkRequest = Aws4Signer.create().sign(awsRequestForSigning, signerParams);
+        AwsV4HttpSigner signer = AwsV4HttpSigner.create();
+        SignedRequest signedRequest = signer.sign(r -> r
+                .identity(credentialsProvider.resolveCredentials())
+                .request(awsRequestForSigning)
+                .putProperty(AwsV4HttpSigner.SERVICE_SIGNING_NAME, serviceName)
+                .putProperty(AwsV4HttpSigner.REGION_NAME, region.id()));
 
         // Add the authentication headers to the original request
         return signedRequestBuilder
-                .header("Authorization", signedSdkRequest.headers().get("Authorization").get(0))
-                .header("x-amz-date", signedSdkRequest.headers().get("x-amz-date").get(0))
+                .header("Authorization", signedRequest.request().headers().get("Authorization").getFirst())
+                .header("x-amz-date", signedRequest.request().headers().get("x-amz-date").getFirst())
                 .build();
     }
 
